Changelog
=========

4.4-dev - (unreleased)
----------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.daviz
* Feature: Updated Daviz Visualization fields help to provide examples and
  tutorials
  [voineali #4995]
* Change: do not show duplicates of sparql and json data when adding existing
  data. show only last version. Upgrade step (not needed for EEA production):
  ZMI > portal_setup > profile "EEA Daviz" > import Possible relations settings
  [demarant #5003]
* Feature: Refactoring to be able to use eea.googlecharts or eea.exhibit as
  standalone packages or as part of eea.daviz visualization bundle.
  [voineali #4996]

4.3 - (2012-03-05)
------------------
* Bug fix: restricted data sources relations to exhibit json or sparql queries.
  Upgrade step:
  ZMI > portal_setup > profile "EEA Daviz" > import Possible relations settings
  [demarant #4919]
* Change: The new UI expects eea.googlecharts and eea.sparql, therefore they are
  now an integral part of this product and declared as dependencies.
  [demarant]
* Change: Renamed DavizPresentation to DavizVisualization. [demarant]
* Change: removed label widget for data input, no need for it,
  we have already many headings. [demarant]
* Change: Re-group DavizPresentation AT Schema
  [voineali #4980]
* Change: Reordered the data input fields. Most common scenarion on top.
  rephrasing.
  [demarant #4980]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.daviz
  [voineali]
* Fixed: Support case insensitive column types in CSV files
  [voineali #4975]
* Feature: Also support CSV or any other *SV file by auto-detecting dialect
  [voineali #4977]
* Feature: Added SpreadSheet field to DavizPresentation Schema in order
  to easily copy & paste TAB separated text as data source
  [voineali #4967]
* Feature: Added QuickUpload field to DavizPresentation Schema in order