@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="portal_workflow" meta_type="Plone Workflow Tool">
+ <bindings>
+  <type type_id="DavizVisualization">
+   <bound-workflow workflow_id="folder_workflow"/>
+  </type>
+ </bindings>
+</object>
